--- a/package.json
+++ b/package.json
@@ -22,16 +22,23 @@
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^0.14.7",
+    "css-loader": "^0.9.0",
+    "extract-text-webpack-plugin": "^0.3.5",
+    "style-loader": "^0.8.2",
+    "stylus-loader": "^0.4.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
+    "firebase": "^3.6.1",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
-    "redux": "^3.0.4"
+    "redux-form": "^4.1.3",
+    "redux": "^3.0.4",
+    "redux-thunk": "^2.1.0"
   }
 }
