--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "redux-simple-starter",
+  "name": "firebase-react-chat",
   "version": "1.0.0",
-  "description": "Simple starter package for Redux with React and Babel support",
+  "description": "Simple React chat app with Redux, Firebase and Babel support",
   "main": "index.js",
-  "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
+  "repository": "https://github.com/ivansiacho/firebase-react-chat",
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
